<resources>
    <string name="app_name">Wool Fabric</string>

    <style name="lb">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#426B1F</item>
    </style>

    <string name="lb"> $12.99 / lb </string>

    <style name="cursorcolor" parent="Widget.AppCompat.EditText">
        <item name="colorSecondary">@color/black</item>
        <item name="colorSecondaryVariant">@color/black</item>
    </style>
    <string name="please_login">Please Login</string>
    <string name="welcome_text">Welcome Back</string>
    <string name="lemail">Email</string>
    <string name="lpassword">Password</string>
    <string name="lcontinue">Continue</string>
    <string name="lcreatefa">Create an Farmer A/c</string>
    <string name="lcreateacc">Create an Account</string>
    <string name="lcreatein">Create an Industry A/c</string>

    <string name="addmemname">Name</string>
    <string name="addmemmob">Mobile number</string>
    <string name="addmememail">Email-id</string>
    <string name="addmempass">Password</string>
    <string name="addmemcount">How Many sheeps, goats, alpacas and rabbits ?</string>
    <string name="addmemadd">Add</string>
    <string name="laddprod">Product name</string>
<string name="Orders">Orders</string>
<string name="upload">Upload</string>
    <string name="Per_kg_Wool">Per_kg_Wool</string>
    <string name="Description">Description</string>
    <string name="Send_requests">Send Requests</string>
    <string name="Name">Name</string>
    <string name="Mobile_Num">Mobile Number</string>
    <string name="Mail_id">Mail ID</string>
    <string name="Password">Password</string>
    <string name="CreateAccount">Create Account</string>
    <string name="acc_Or">Or</string>
    <string name="Hi_there">Hi there!</string>
    <string name="GetStarted">Get Started</string>

    <string name="addquan">Basic Quantity</string>
    <string name="addprice">Price</string>
    <string name="acc_login">Login</string>
    <string name="Last_Price">Last Price</string>
    <string name="Today_Price">Today Price</string>
    <string name="per_name">Name</string>
    <string name="per_email">Email</string>
    <string name="per_mobile">Mobile</string>
    <string name="per_password">Password</string>
    <string name="no_sheeps">No of Sheeps</string>
    <string name="update">Update</string>
    <string name="Product_name">Product Name</string>
    <string name="Left_quantity">Left Quantity</string>
    <string name="Cost">Cost</string>
    <string name="Update">Update</string>
    <string name="Call">CALL</string>
    <string name="ldetails">Details</string>
    <string name="Reference">Reference</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="products"><u>Products</u></string>
    <string name="sentrequest">Requests Sent</string>
    <string name="refi">Requests From Industry</string>
    <string name="Logout">Logout</string>
    <string name="Requests">Requests</string>
    <string name="SendRequest">SendRequest</string>
    <string name="kg">kg</string>
    <string name="IndustryRequests">IndustryRequests</string>
    <string name="RequestsReceived">Requests Received</string>

    <string name="details">Details</string>
    <string name="stock_over">Stock Over</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="Hi_Test">Hi Test</string>
    <string name="health">Health</string>
    <string name="getimg">Get image from gallery</string>
    <string name="acc_Title">Title</string>
    <string name="story">Write Your Story</string>
    <string name="ylink">You tube link</string>
    <string name="Orietaition">Orietaition</string>
    <string name="pay">Pay</string>


    <style name="circle">
        <item name="cornerFamily">rounded</item>
        <item name="cornerSize">50%</item>
        <item name="android:padding">10sp</item>
    </style>

    <style name="theme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
        <item name="android:navigationBarColor">@color/background</item>
        <item name="statusBarBackground">@color/background</item>
    </style>

    <style name="edittext">
        <item name="android:drawablePadding">25sp</item>
        <item name="android:paddingStart">15sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="maxLines">1</item>
        <item name="android:layout_marginTop">10dp</item>
        <item name="android:theme">@style/cursorcolor</item>
        <item name="android:inputType">textEmailAddress</item>
        <item name="android:backgroundTint">@color/white</item>
        <item name="android:background">@drawable/curve</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">70dp</item>
    </style>

    <style name="editext">
        <item name="android:drawablePadding">10sp</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">match_parent</item>
    </style>

    <style name="inputlayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_marginTop">10sp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="boxStrokeColor">@color/white</item>
        <item name="hintAnimationEnabled">false</item>
        <item name="hintEnabled">false</item>
        <item name="startIconTint">#FFF</item>
    </style>

    <string name="title_activity_view_all_industries">ViewAllIndustries</string>
    <string name="apikey">AIzaSyCsXwChJiMtdWfz74-XJZjmAJhgcCOm1tE</string>
    <string name="inputlay">
    <item name="style">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
    <item name="android:layout_width">match_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="app:boxStrokeColor">@color/white</item>
    <item name="app:endIconTint">#FFFFFF</item>
    <item name="app:hintTextColor">#FFFFFF</item>
    <item name="app:startIconTint">#FFFFFF</item>
</string>

    <style name="splash" parent="Theme.AppCompat.DayNight.NoActionBar">
        <item name="android:windowDisablePreview">true</item>
        <item name="android:windowBackground">@color/background</item>
    </style>

    <string name="edittext">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:maxLines">1</item>
        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
    </string>
</resources>