<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Farmer.Functions.SendRequest">
    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/woolproduct"
        android:id="@+id/imageview7"
        android:layout_width="match_parent"
        android:layout_height="250sp"/>
    <LinearLayout
        android:orientation="vertical"
        android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/details8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:hint="@string/kg"
            android:maxLines="1"
            android:maxLength="10"
            android:textColorHint="#000"
            android:id="@+id/kg"
            android:paddingStart="10sp"
            android:inputType="phone"
            android:digits="0123456789."
            android:background="@drawable/curve"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="10sp"
            android:layout_height="50sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:hint="@string/Per_kg_Wool"
            android:id="@+id/perkg"
            android:textColorHint="#000"
            android:inputType="phone"
            android:digits="01234567899."
            android:maxLines="1"
            android:maxLength="10"
            android:paddingStart="10sp"
            android:background="@drawable/curve"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="50sp"
            tools:ignore="HardcodedText" />
        <EditText
            android:layout_marginTop="10sp"
            android:hint="@string/Description"
            android:paddingStart="20sp"
            android:paddingBottom="10sp"
            android:textColorHint="#000"
            android:id="@+id/desc"
            android:gravity="start|bottom"
            android:background="@drawable/curve"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="100sp"
            tools:ignore="HardcodedText" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:text="@string/Send_requests"
            android:id="@+id/send"
            android:layout_marginTop="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:background="@drawable/curve"
            android:layout_height="50sp"/>
    </LinearLayout>

</LinearLayout>