<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:ignore="HardcodedText,ScrollViewSize,ContentDescription"

    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100sp"
  android:layout_margin="10dp"
        android:padding="15sp"
        android:src="@drawable/farmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
 />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="17sp"
        android:textColor="#FFC0CB"
        android:gravity="center"
        android:fontFamily="@font/robotobold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_login"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:orientation="vertical" >
        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:hint="@string/lemail"
            android:textColorHint="#000"
            android:drawablePadding="25sp"
            android:digits="ABCDEFGHIJKLMNOPQ.RSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@"
            android:paddingStart="15sp"
            android:textColor="@color/black"
            android:id="@+id/email"
            android:theme="@style/cursorcolor"
            android:maxLines="1"
            android:layout_marginTop="20sp"
            android:inputType="textEmailAddress|textFilter"
            android:backgroundTint="@color/white"
            android:background="@drawable/curve"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="15sp"
            android:id="@+id/password"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_key_fill0_wght400_grad0_opsz24"
            android:hint="@string/lpassword"
            android:drawablePadding="25sp"
            android:inputType="textPassword"
            android:theme="@style/cursorcolor"
            android:paddingStart="15sp"
            android:maxLines="1"
            android:textColor="@color/black"
            android:nextFocusUp="@color/black"
            android:backgroundTint="@color/white"
            android:background="@drawable/curve"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            tools:ignore="HardcodedText" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:text="Continue"
            android:layout_marginTop="15sp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:cardCornerRadius="35sp"
            android:id="@+id/continue2"
            android:layout_height="65dp"
            tools:ignore="HardcodedText,KeyboardInaccessibleWidget" >
            <LinearLayout
                android:layout_width="match_parent"
                android:background="#FD6A6C6C"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="match_parent">
<TextView
    android:text="@string/lcontinue"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
                <ImageView
                    app:tint="@color/white"
                    android:layout_marginStart="5sp"
                  android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_weight="0.27"
                android:layout_width="0sp"
                android:background="@drawable/dots"
                android:layout_height="5dp"/>
<TextView
    android:text="Or"
    android:gravity="center"
    android:layout_weight="0.1"
    android:layout_width="0sp"
    android:layout_height="wrap_content"
 />
            <View
                android:layout_weight="0.27"
                android:background="@drawable/dots"
                android:layout_width="0sp"
                android:layout_height="5dp"/>
        </LinearLayout>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_marginTop="20sp"
    app:cardCornerRadius="35sp"
    android:clickable="true"
    android:id="@+id/signuppage"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#6A6C6C"
    android:layout_height="60sp">
             <TextView
                 android:layout_gravity="center"

                    android:background="@drawable/curve"
                    android:text="@string/lcreateacc"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
</androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            app:cardCornerRadius="35sp"
            android:clickable="true"
            android:id="@+id/farmerac"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#6A6C6C"
            android:layout_height="60sp">
            <TextView
                android:layout_gravity="center"

                android:background="@drawable/curve"
                android:text="@string/lcreatefa"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            app:cardCornerRadius="35sp"
            android:clickable="true"
            android:id="@+id/industyac"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#6A6C6C"
            android:layout_height="60sp"
            tools:ignore="KeyboardInaccessibleWidget">
            <TextView
                android:layout_gravity="center"

                android:background="@drawable/curve"
                android:text="@string/lcreatein"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
</ScrollView>