<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".User.Functions.ViewProducts"
    tools:ignore="ScrollViewSize"
    android:overScrollMode="never"
    android:background="@color/background"
    android:layout_height="match_parent">


   <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/woolproduct"
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/details5"
        android:padding="20sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Orietaition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/products"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cycle5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
             />

<androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:text="@string/pay"
    android:textSize="20sp"
    android:backgroundTint="#6A6C6C"
    android:textAllCaps="false"
    android:background="@drawable/curve"
    android:layout_margin="10sp"
    android:id="@+id/payment"
    android:layout_height="wrap_content"/>
</LinearLayout>

</ScrollView>