<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#6A6C6C"
    android:layout_margin="10sp"
    app:cardCornerRadius="20sp"
    app:cardElevation="10sp"
    tools:ignore="HardcodedText"
    android:layout_height="150sp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearanceOverlay="@style/circle"
        android:id="@+id/imageView6"
        android:layout_width="100sp"
        android:elevation="10sp"
        android:scaleType="centerCrop"
        android:src="@drawable/woolproduct"
        android:layout_height="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:padding="10sp"
        android:id="@+id/details6"
        android:text="@string/details"
        android:textSize="12sp"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
         />

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="35sp"
        android:orientation="vertical"
        android:id="@+id/linearLayout4"
        android:layout_width="100sp"
        app:cardElevation="10sp"
        android:backgroundTint="@color/white"
        android:background="@drawable/curve"
        android:layout_height="50sp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <LinearLayout
            android:id="@+id/mylay"
            android:visibility="gone"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0sp"
                android:id="@+id/minus"
                android:layout_weight="3.33"
                android:layout_height="50dp"
                android:background="@color/background"
                android:src="@drawable/minus" />
            <TextView
                android:layout_weight="3.33"
                android:maxLines="1"
                android:maxLength="2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/count"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                />

            <ImageView
                android:padding="3dp"
                android:layout_weight="3.33"
                android:id="@+id/plus"
                android:layout_width="0sp"
                android:layout_height="50dp"
                android:background="@color/background"
                android:src="@drawable/plus" />
        </LinearLayout>
        <TextView
            android:background="#6A6C6C"
            android:id="@+id/add"
            android:textColor="@color/white"
            android:gravity="center"

            android:text="@string/addmemadd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="HardcodedText" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/stockover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_over"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>